--- a/src/assets/css/addFlight.css
+++ b/src/assets/css/addFlight.css
@@ -10,9 +10,20 @@
     width: 100px;
 }
 .el-row {
-    margin-top :20px;
+    margin-top :15px;
+    text-align: center;
 }
 
 .main-button{
     width:200px;
+}
+
+.el-card {
+    position: relative;
+    width: 60%;
+    left: 20%;
+}
+
+.el-upload {
+    margin-top: 40px;
 }
