--- a/src/assets/css/addFlight.css
+++ b/src/assets/css/addFlight.css
@@ -3,19 +3,23 @@
     font-weight: bolder;
     text-align: center;
 }
-.el-input--suffix {
+.width1 {
+    width:100px;
+}
+.width2 {
     width:200px;
 }
-.el-input-number {
-    width: 100px;
+
+::v-deep .el-input__inner {
+    text-align: center;
 }
 .el-row {
     margin-top :15px;
     text-align: center;
 }
 
-.main-button{
-    width:200px;
+.el-row.margin1{
+    margin-top :40px;
 }
 
 .el-card {
