--- a/src/assets/css/manage.css
+++ b/src/assets/css/manage.css
@@ -1,27 +1,25 @@
-.title {
-    font-size:25px;
-    font-weight: bolder;
-    text-align: center;
-}
-
 .result-list {
-    width:70%;
-    left:10%;
+    width:90%;
 }
 ::v-deep .el-table .el-table__cell {
     text-align: center;
 } 
 
 .el-card {
+    opacity: 90%;
     position: relative;
-    width: 70%;
-    left :15%;
+    width:80%;
+    left :10%;
+    min-height: 550px;
 }
 
 .el-row{
     margin-top :10px;
 }
-
+.margin1{
+    margin:0;
+    height:60px;
+}
 .passenger-list {
     position: relative;
     margin-top:30px;
