--- a/src/assets/css/addFlight.css
+++ b/src/assets/css/addFlight.css
@@ -1,27 +1,31 @@
-.title {
-    font-size:25px;
-    font-weight: bolder;
-    text-align: center;
-}
 .width1 {
     width:100px;
 }
 .width2 {
-    width:200px;
+    width:210px;
 }
-
+.el-image {
+    width:50px;
+    height:50px;
+}
 ::v-deep .el-input__inner {
     text-align: center;
 }
 .el-row {
-    margin-top :15px;
+    margin-top:15px;
     text-align: center;
 }
 
 .el-row.margin1{
     margin-top :40px;
 }
-
+.el-row.margin2{
+    margin:0;
+    height: 60px;
+}
+.main-button {
+    margin-top:20px;
+}
 .el-card {
     position: relative;
     width: 60%;
