--- a/src/assets/css/ticketInfo.css
+++ b/src/assets/css/ticketInfo.css
@@ -2,19 +2,21 @@
 ::v-deep .el-table .el-table__cell {
     text-align: center;
 } 
-.title {
-    font-size:25px;
-    font-weight: bolder;
-    text-align: center;
-}
 
 .result-list {
     position: relative;
-    width:70%;
-    left:15%;
+    width:90%;
+    left:5%;
 }
 
-.el-row
+.margin1
 {
-    width :100%;
+    height:50px;
+}
+
+.el-card {
+    position: relative;
+    width:90%;
+    min-height: 600px;
+    left:5%;
 }
