--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -7,6 +7,9 @@ body {
     width: 100%;
     height: 100%;
     margin: 0;
+    background: linear-gradient(to bottom right, rgba(74, 233, 239, 0.919), rgba(73, 141, 242, 0.732), rgba(74, 233, 239, 0.93));
+    background-image: url(../../img/back5.jpg);
+    background-attachment: fixed;
 }
 
 *{
@@ -24,11 +27,13 @@ body {
     position: relative;
     width:100%;
     min-height:91.8%;
-    background:linear-gradient(to bottom right, rgba(74, 233, 239, 0.919), rgba(73, 141, 242, 0.732), rgba(74, 233, 239, 0.93));
-    background-image: url(../../img/back.jpg);
+    /* background:linear-gradient(to bottom right, rgba(74, 233, 239, 0.919), rgba(73, 141, 242, 0.732), rgba(74, 233, 239, 0.93));
+    background-image: url(../../img/back5.jpg);
+    background-size: 100% 100%;
+    background-attachment: fixed; */
 }
 
 .el-card.card-back {
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgba(255, 255, 255, 0.389);
     border-color: rgba(0, 0, 0, 0);
 }
