--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -7,9 +7,9 @@ body {
     width: 100%;
     height: 100%;
     margin: 0;
-    background: linear-gradient(to bottom right, rgba(74, 233, 239, 0.919), rgba(73, 141, 242, 0.732), rgba(74, 233, 239, 0.93));
+    /* background: linear-gradient(to bottom right, rgba(74, 233, 239, 0.919), rgba(73, 141, 242, 0.732), rgba(74, 233, 239, 0.93));
     background-image: url(../../img/back5.jpg);
-    background-attachment: fixed;
+    background-attachment: fixed; */
 }
 
 *{
@@ -23,14 +23,15 @@ body {
     text-align: center;
 }
 
-.back1 {
+.el-main {
     position: relative;
+    margin-top: 50px;
     width:100%;
-    min-height:91.8%;
-    /* background:linear-gradient(to bottom right, rgba(74, 233, 239, 0.919), rgba(73, 141, 242, 0.732), rgba(74, 233, 239, 0.93));
+    min-height:90%;
+    background:linear-gradient(to bottom right, rgba(74, 233, 239, 0.919), rgba(73, 141, 242, 0.732), rgba(74, 233, 239, 0.93));
     background-image: url(../../img/back5.jpg);
     background-size: 100% 100%;
-    background-attachment: fixed; */
+    background-attachment: fixed;
 }
 
 .el-card.card-back {
